<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Titles -->
    <string name="app_name">Project Nar</string>
    <string name="title_qr_code">QR Code</string>
    <string name="title_smart_config">Smart Config</string>
    <string name="title_section3">Section 3</string>
    <string name="title_add_nar">Add New Nar Device</string>

    <!-- SmartConfig page -->
    <string name="setup_device">Setup Device</string>
    <string name="title_wifi_info">Wifi Information</string>
    <string name="wifi_ssid">Wifi name</string>
    <string name="wifi_pass">Wifi password</string>

    <!-- Setting Menu -->
    <string name="action_empty">Empty Action</string>
    <string name="action_settings">Settings</string>

    <!-- QR Code Menu -->
    <string name="qr_scan_btn">Scan QR Code</string>
    <string name="wifi_offline">Connect to wifi before setting up</string>
    <string name="title_activity_smart_config">Setup Nar Connection</string>
    <string name="title_activity_simple_scanner">Scan QR Code</string>

    <!-- string name="hello_world">Hello world!</string -->

    <string name="title_activity_new_nar">Register New Nar</string>
    <string name="login_title">Login to Your Account</string>
    <string name="add_new_nar">Add New Nar</string>
    <string name="new_nar_id">ID:</string>
    <string name="new_nar_pass">Pass:</string>
    <string name="new_nar_activate">Add Nar</string>
    <!-- string name="title_activity_nar_panel">NarPanelActivity</string -->
    <string name="title_activity_nar_control_panel">Nar Control Panel</string>
	<string name="new_nar_name_hint">Nar Name</string>
    <string name="new_nar_id_hint">Nar ID</string>
    <string name="new_nar_pass_hint">Nar pass</string>
    <string name="nar_ctrl_btn_on">On</string>
    <string name="nar_ctrl_btn_off">Off</string>
    <string name="nar_ctrl_unregister">Delete</string>
    <string name="nar_ctrl_btn_on_icon">fa-circle-o-notch</string>
    <string name="nar_ctrl_btn_off_icon">fa-power-off</string>
    <string name="user_auth_btn_register">Register/Add New</string>
    <string name="title_activity_authenticator">Register/Add User</string>
	<string name="nar_ctrl_start_smartcfg">Setup Device</string>
	<string name="action_logout">Logout</string>
	<string name="narlab_label">Narlab</string>
	<string name="ftc_error">Couldn\'t setup device check your wifi password</string>
	<string name="ftc_success">Your device is connected to wifi</string><string name="ftc_timeout">Setup timed out
1- Put device in SmartConfig mode
2- Keep your phone close</string>
	<string name="nar_ctrl_btn_chg_name">Change Name</string>

</resources>
