<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="net.narlab.projectnar.NewNarInfoFragment">

	<LinearLayout
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:paddingBottom="@dimen/activity_vertical_margin"
			  android:paddingLeft="@dimen/activity_horizontal_margin"
			  android:paddingRight="@dimen/activity_horizontal_margin"
			  android:paddingTop="@dimen/activity_vertical_margin"
			  android:orientation="vertical"
				android:layout_gravity="center_horizontal">

		<TextView
			android:id="@+id/new_nar_title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/title_add_nar"
			android:background="#fff"
			android:textSize="30sp"
			android:layout_margin="2dp"
			android:gravity="center"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout
				android:baselineAligned="false"
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<LinearLayout
					android:orientation="vertical"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>
					<com.beardedhen.androidbootstrap.BootstrapEditText
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_margin="5dp"
						android:layout_weight="3"
						android:text="@string/new_nar_id"
						android:textSize="16sp"
						android:editable="false"
						android:focusable="false"
						/>
					<com.beardedhen.androidbootstrap.BootstrapEditText
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_margin="5dp"
						android:layout_weight="3"
						android:text="@string/new_nar_pass"
						android:textSize="16sp"
						android:editable="false"
						android:focusable="false"
						/>
				</LinearLayout>
				<LinearLayout
					android:orientation="vertical"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="4">
					<!-- Device ID/Name here -->
					<com.beardedhen.androidbootstrap.BootstrapEditText
						android:id="@+id/nar_id"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_margin="5dp"
						android:hint="@string/new_nar_id_hint"
						android:text="CC3000"
						android:textSize="16sp"
						android:minWidth="200dp"
						android:maxLines="1"
						android:singleLine="true"
						/>
					<!-- Device pass here -->
					<com.beardedhen.androidbootstrap.BootstrapEditText
						android:id="@+id/nar_pass"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_margin="5dp"
						android:hint="@string/new_nar_pass_hint"
						android:text="cccccccccccccccc"
						android:layout_gravity="center"
						android:textSize="16sp"
						android:maxLines="1"
						android:singleLine="true"
						/>
				</LinearLayout>
			</LinearLayout>
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:layout_marginTop="5dp">
				<com.beardedhen.androidbootstrap.BootstrapButton
					android:id="@+id/new_nar_btn_qr_scan"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:text="@string/qr_scan_btn"
					bootstrapbutton:bb_icon_right="fa-qrcode"
					bootstrapbutton:bb_type="success"
					bootstrapbutton:bb_roundedCorners="true"
					android:layout_gravity="center"
					android:textSize="16sp"
					android:onClick="onScanQRCodeBtnClick"
					/>
				<com.beardedhen.androidbootstrap.BootstrapButton
					android:id="@+id/new_nar_btn_add"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:text="@string/new_nar_activate"
					bootstrapbutton:bb_icon_right="fa-plus-square"
					bootstrapbutton:bb_type="info"
					bootstrapbutton:bb_roundedCorners="true"
					android:layout_gravity="center"
					android:textSize="16sp"
					android:onClick="onAddNewNar"
					/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</ScrollView>
