<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.narlab.projectnar.NarControlPanelActivity"
	android:orientation="vertical"
	android:background="@color/white">

	<com.beardedhen.androidbootstrap.BootstrapEditText
		android:id="@+id/nar_ctrl_nar_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/new_nar_id_hint"
		android:layout_gravity="center"
		android:textSize="36sp"
		android:background="#fff"
		bootstrapbutton:be_state="success"
		android:layout_margin="10dp"
		android:padding="10dp"
		bootstrapbutton:be_roundedCorners="true"
		android:editable="false"
		android:focusable="false"
		/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center">
		<com.beardedhen.androidbootstrap.BootstrapButton
			android:id="@+id/nar_ctrl_btn_on_off"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			bootstrapbutton:bb_type="success"
			android:textSize="20sp"
			android:text="@string/nar_ctrl_btn_on"
			android:layout_gravity="center"
			android:onClick="onButtonClicked"
			bootstrapbutton:bb_roundedCorners="true"
			bootstrapbutton:bb_icon_right="@string/nar_ctrl_btn_on_icon"
			android:layout_margin="@dimen/nar_ctrl_button_margin"
		/>
		<!-- Off state variables:
			bb_icon_right="fa-power-off"
			bb_type="danger"
			text="nar_ctrl_btn_off"-->
		<com.beardedhen.androidbootstrap.BootstrapButton
			android:id="@+id/nar_ctrl_btn_unregister"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			bootstrapbutton:bb_type="danger"
			android:textSize="20sp"
			android:text="@string/nar_ctrl_unregister"
			android:layout_gravity="center"
			android:onClick="onButtonClicked"
			bootstrapbutton:bb_roundedCorners="true"
			bootstrapbutton:bb_icon_right="fa-trash-o"
			android:layout_margin="@dimen/nar_ctrl_button_margin"
			/>
	</LinearLayout>
	<com.beardedhen.androidbootstrap.FontAwesomeText
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		bootstrapbutton:fa_icon="fa-refresh"
		android:layout_gravity="center"/>
	<com.beardedhen.androidbootstrap.BootstrapEditText
		android:id="@+id/nar_ctrl_lastalive"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		bootstrapbutton:be_state="warning"
		bootstrapbutton:be_roundedCorners="true"
		android:text="Lastalive time"
		android:layout_gravity="center"
		android:editable="false"
		android:focusable="false"
		/>
	<com.beardedhen.androidbootstrap.BootstrapButton
		android:id="@+id/nar_ctrl_btn_smartcfg"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		bootstrapbutton:bb_type="primary"
		android:textSize="20sp"
		android:text="@string/nar_ctrl_start_smartcfg"
		android:layout_gravity="center"
		android:onClick="onButtonClicked"
		bootstrapbutton:bb_roundedCorners="true"
		bootstrapbutton:bb_icon_right="fa-cog"
		android:layout_margin="@dimen/nar_ctrl_button_margin"
		android:layout_marginTop="40dp"
		/>

</LinearLayout>
