<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="net.narlab.projectnar.HomeActivity$WifiInfoFragment">
	
	<TextView
		android:id="@+id/title_wifi_info"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_wifi_info"
		android:background="#fff"
		android:textSize="30sp"
		android:gravity="center"/>
	<com.beardedhen.androidbootstrap.BootstrapEditText
		android:id="@+id/wifi_ssid"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/wifi_ssid"
		android:tag="@string/wifi_ssid"
		android:layout_margin="5dp"
		android:gravity="center"
	/>
	<com.beardedhen.androidbootstrap.BootstrapEditText
		android:id="@+id/wifi_pass"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/wifi_pass"
		android:tag="@string/wifi_pass"
		android:selectAllOnFocus="true"
		android:inputType="textPassword"
		android:layout_margin="5dp"
		android:gravity="center"
	/>
	<!--
		bootstrapbutton:be_state="success"
		bootstrapbutton:bb_roundedCorners="true"
	-->
	<TextView
		android:id="@+id/wifi_netmask"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	<TextView
		android:id="@+id/wifi_gateway"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	<!--TextView
		android:id="@+id/wifi_ip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" /-->
	<TextView
		android:id="@+id/wifi_dns1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	<TextView
	android:id="@+id/wifi_dns2"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content" />
	<!-- basic button -->
	<com.beardedhen.androidbootstrap.BootstrapButton
		android:id="@+id/setup_device"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:text="@string/setup_device"
		bootstrapbutton:bb_icon_right="fa-spinner"
		bootstrapbutton:bb_type="success"
		bootstrapbutton:bb_roundedCorners="true"
		android:layout_gravity="center"
		android:textSize="16sp"
		android:onClick="onSetupDeviceBtnClick"
	/>
		
</LinearLayout>
